[package]
name = "sol_keccak"
version = "0.1.0"
authors = ["gorub"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.7.3"
keccak-rust = "*"
base64 = "0.13.0"
borsh = "0.7.1"
borsh-derive = "0.8.1"

[dev-dependencies]
solana-program-test = "1.7.3"
solana-sdk = "1.7.3"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
